<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TableRow>

    <EditText
        android:id="@+id/txt_visor"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_column="0"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_span="4"
        android:layout_weight="1"
        android:background="@android:drawable/editbox_background"
        android:clickable="false"
        android:enabled="false"
        android:focusable="false"
        android:gravity="right|center_vertical"
        android:inputType="numberDecimal|none"
        android:text="@string/zerozero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </EditText>

    <Button
        android:id="@+id/bt_7"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:text="@string/sete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_visor"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_8"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:text="@string/oito"
        app:layout_constraintStart_toEndOf="@+id/bt_7"
        app:layout_constraintTop_toTopOf="@+id/txt_visor"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_9"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:text="@string/nove"
        app:layout_constraintStart_toEndOf="@+id/bt_8"
        app:layout_constraintTop_toTopOf="@+id/txt_visor"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_divi"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/divisao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_9"
        app:layout_constraintTop_toTopOf="@+id/txt_visor" />

    <Button
        android:id="@+id/bt_4"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/quatro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_7"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_5"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/cinco"
        app:layout_constraintStart_toEndOf="@+id/bt_4"
        app:layout_constraintTop_toBottomOf="@+id/bt_8"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_6"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/seis"
        app:layout_constraintStart_toEndOf="@+id/bt_5"
        app:layout_constraintTop_toBottomOf="@+id/bt_9"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_multi"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_6"
        app:layout_constraintTop_toBottomOf="@+id/bt_divi" />

    <Button
        android:id="@+id/bt_1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/um"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_4"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_2"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:text="@string/dois"
        app:layout_constraintStart_toEndOf="@+id/bt_1"
        app:layout_constraintTop_toBottomOf="@+id/bt_5"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/bt_3"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/tres"
        app:layout_constraintStart_toEndOf="@+id/bt_2"
        app:layout_constraintTop_toBottomOf="@+id/bt_6"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_subt"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/subt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_3"
        app:layout_constraintTop_toBottomOf="@+id/bt_multi" />

    <Button
        android:id="@+id/bt_ponto"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/ponto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_1"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_0"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/bt_ponto"
        app:layout_constraintTop_toBottomOf="@+id/bt_2"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_igual"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:text="@string/igual"
        app:layout_constraintStart_toEndOf="@+id/bt_0"
        app:layout_constraintTop_toBottomOf="@+id/bt_3"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/bt_soma"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/soma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_igual"
        app:layout_constraintTop_toBottomOf="@+id/bt_subt" />

    <Button
        android:id="@+id/bt_limpar"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:text="@string/limpar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_ponto"
        app:layout_constraintVertical_bias="0.02"
        android:layout_marginLeft="4dp" />

    <Button
        android:id="@+id/bt_sair"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/sair"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/bt_limpar"
        app:layout_constraintTop_toBottomOf="@+id/bt_igual"
        app:layout_constraintVertical_bias="0.02" />


</android.support.constraint.ConstraintLayout>